configs/security/dhcp2-firewall-rules.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Sat Jul  5 19:35:37 2025
*filter
:INPUT DROP [500:25838]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [17545:4953312]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.15.0/24 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 389 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 647 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -j ACCEPT
COMMIT
# Completed on Sat Jul  5 19:35:37 2025
