configs/security/nfs-firewall-rules.txt
# Generated by iptables-save v1.8.9 (nf_tables) on Sat Jul  5 19:35:28 2025
*filter
:INPUT DROP [262:54422]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [38312:41032778]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 4444 -j ACCEPT
-A INPUT -s 192.168.15.0/24 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -j ACCEPT
-A FORWARD -i ens33 -o ens34 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens34 -o ens33 -j ACCEPT
-A FORWARD -i ens34 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o ens34 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i tun0 -o ens34 -j ACCEPT
-A FORWARD -i ens34 -o tun0 -j ACCEPT
-A FORWARD -i ens34 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o ens34 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tun+ -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Jul  5 19:35:28 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Sat Jul  5 19:35:28 2025
*nat
:PREROUTING ACCEPT [1604:165478]
:INPUT ACCEPT [496:40525]
:OUTPUT ACCEPT [330:33324]
:POSTROUTING ACCEPT [124:7464]
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.15.0/24 -o ens33 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Jul  5 19:35:28 2025
